# ssrq-utils

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  justfile  pyproject.toml
.github/workflows/: test.yml
lib/: uca.rs
src/ssrq_utils/: __init__.py
src/ssrq_utils/i18n/: error.py  model.py  text.py  translator.py
src/ssrq_utils/idno/: __init__.py  filter.py  model.py
src/ssrq_utils/lang/: display.py
src/ssrq_utils/uca/: __init__.py  _pyferuca.pyi
src/ssrq_utils/urn/: __init__.py  model.py
tests/: test_i18n.py  test_idno.py  test_lang.py  test_uca.py  test_urn.py
