[tool.poetry]
name = "ssrq-utils"
version = "0.1.0"
description = "Various utilities bundled as a python package."
authors = ["Bpolitycki <bastian.politycki@unisg.ch>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "ssrq_utils", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.7.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.6"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
poethepoet = "^0.26.1"
mypy = "^1.10.0"
commitizen = "^3.27.0"
pre-commit = "^3.7.1"

[tool.poe.tasks]
format = "ruff format ."
lint = [{ cmd = "ruff check . --fix" }, { cmd = "mypy src" }]
test = "pytest --cov=src/ssrq_utils --cov-fail-under=95"

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
fix = true
line-length = 100
lint.ignore = [
    "D100",
    "D103",
    "D104",
    "D203",
    "D211",
    "D213",
    "E501",
    "G010",
    "ISC001",
    "PGH003",
    "RET504",
    "S101",
    "S307",
]
lint.select = [
    "A",
    "ASYNC",
    "B",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "F",
    "FLY",
    "I",
    "ISC",
    "N",
    "NPY",
    "PGH",
    "PIE",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PT",
    "RET",
    "RUF",
    "RSE",
    "SIM",
    "TID",
    "UP",
    "W",
    "YTT",
]
src = ["src", "tests"]
target-version = "py311"
lint.unfixable = ["F401", "F841"]

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
