[project]
name = "ssrq-utils"
version = "0.5.0"
description = "Various utilities bundled as a python package."
readme = "README.md"
authors = [{ name = "Bpolitycki", email = "bastian.politycki@unisg.ch" }]
requires-python = ">=3.11"
dependencies = ["cachebox>=4.3.1", "maturin>=1.7.8", "pydantic>=2.9.2"]

[dependency-groups]
dev = [
    "commitizen>=3.31.0",
    "maturin-import-hook>=0.2.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.1",
    "pytest>=8.3.3",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.4",
    "rust-just>=1.36.0",
]

[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src"
module-name = "ssrq_utils.uca._pyferuca"
features = ["pyo3/extension-module"]
python-packages = ["ssrq_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
xfail_strict = true

[tool.ruff]
fix = true
line-length = 100
lint.ignore = [
    "D100",
    "D103",
    "D104",
    "D203",
    "D211",
    "D213",
    "E501",
    "G010",
    "ISC001",
    "PGH003",
    "RET504",
    "S101",
    "S307",
]
lint.select = [
    "A",
    "ASYNC",
    "B",
    "C4",
    "C90",
    "D",
    "DTZ",
    "E",
    "F",
    "FLY",
    "I",
    "ISC",
    "N",
    "NPY",
    "PGH",
    "PIE",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "PT",
    "RET",
    "RUF",
    "RSE",
    "SIM",
    "TID",
    "UP",
    "W",
    "YTT",
]
lint.unfixable = ["F401", "F841"]
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.uv]
cache-keys = [
    { file = "pyproject.toml" },
    { file = "Cargo.toml" },
    { file = "**/*.rs" },
]
